fixed content to left aligned

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,5 +1,3 @@
-body {}
-
 .body-add-task {
     max-height: 1080px;
     max-width: 1920px;
