--- a/css/board.css
+++ b/css/board.css
@@ -3,7 +3,6 @@ body {}
 .body-board {
     max-width: 1920px;
     max-height: 1080px;
-    margin: 0 auto;
     overflow-x: hidden;
 }
 
@@ -3428,7 +3427,7 @@ h2 {
     }
 
     .done-content-task {
-         display: flex;
+        display: flex;
         min-height: 100px;
         max-height: 300px;
         width: 100%;
@@ -3653,7 +3652,7 @@ h2 {
         margin-left: 0px;
         width: 100%;
     }
-    
+
     .due-date-edit-task-big {
         margin-left: 0px;
         width: 100%;
@@ -3686,7 +3685,7 @@ h2 {
     .assigned-arrow-icon-edit {
         right: 15px;
     }
-    
+
     .contacts-dropdown-edit {
         margin-left: 0px;
         width: 100%;
