--- a/css/contacts.css
+++ b/css/contacts.css
@@ -658,7 +658,6 @@
         max-height: 1080px;
         max-width: 1920px;
         overflow-y: auto;
-        margin: 0 auto;
     }
 
     .add-contact-overlay {
