--- a/css/header_sidebar.css
+++ b/css/header_sidebar.css
@@ -246,12 +246,9 @@ footer a:hover {
         height: 100px;
         position: fixed;
         bottom: 0;
-        top: auto;
         left: 0;
         padding: 0;
         z-index: 3;
-        margin-bottom: -2px;
-        margin-right: -2px;
     }
 
     .sidebar-join-logo {
@@ -400,7 +397,6 @@ footer a:hover {
         left: 0;
         width: 100%;
         padding: 0;
-        margin: 0;
         box-sizing: border-box;
         margin-bottom: -2px;
         margin-right: -5px;
