--- a/css/info-pages.css
+++ b/css/info-pages.css
@@ -1,39 +1,15 @@
-.privacy-policy-legal-notice-body {
-    height: 1080px;
-    max-height: 1080px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
 .info-pages {
     margin-left: 328px;
     padding-top: 130px;
     padding-right: 80px;
     max-width: 1920px;
-    max-height: 1080px;
-    overflow-y: auto;
-    width: 1590px;
+    width: 100%;
     height: 1080px;
     padding-bottom: 200px;
 }
 
 .info-pages a {
     color: rgba(75, 183, 232);
-}
-
-.info-pages {
-    overflow-y: auto;
-
-    scrollbar-width: none;
-
-    -ms-overflow-style: none;
-}
-
-.info-pages::-webkit-scrollbar {
-    display: none;
 }
 
 .headline-arrow-container {
