--- a/css/signup.css
+++ b/css/signup.css
@@ -3,7 +3,6 @@ body {}
 .body-signup {
     background-color: #f6f7f8;
     min-height: 100vh;
-    margin: 0 auto;
     max-width: 1920px;
 }
 
@@ -12,7 +11,6 @@ body {
     font-family: open-sans, sans-serif;
     background-color: #f6f7f8;
     min-height: 100vh;
-    margin: 0 auto;
 }
 
 .main-container-join {
@@ -21,7 +19,6 @@ body {
     flex-direction: column;
     height: 100vh;
     max-width: 1920px;
-    margin: 0 auto;
     max-height: 1080px;
 
 }
