--- a/css/style-login.css
+++ b/css/style-login.css
@@ -8,7 +8,6 @@
 .Body-Login {
   background-color: #f6f7f8;
   min-height: 100vh;
-  margin: 0 auto;
 }
 
 .display-none {
@@ -68,7 +67,6 @@
   opacity: 0;
   transition: opacity 700ms ease-in-out;
   max-width: 1920px;
-  margin: 0 auto;
 }
 
 .Header-Login {
@@ -367,7 +365,6 @@
     opacity: 0;
     transition: opacity 700ms ease-in-out;
     max-width: 1920px;
-    margin: 0 auto;
     min-height: 1080px;
     justify-content: center;
   }
